Add validation for intputs and style inputs to invalid

--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
     <div class="wrapper-login ">
         <div class="container">
             <div class="d-flex justify-content-center">
-                <form action="/index.html">
+                <form action="/index.html" method="post">
                     <div class="mb-3 text-center">
                         <img src="https://cdn.icon-icons.com/icons2/2837/PNG/512/entrance_icon_180659.png" alt="logo" class="img logo">
                         <div>
@@ -19,7 +19,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="email" class="form-label">Email address</label>
-                        <input type="email" class="form-control" name="email" aria-describedby="emailHelp">
+                        <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
                         <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                     </div>
                     <div class="mb-3">
